# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "manager"
version = "0.1.0"
authors = ["Damien Wilson <damien@mindglob.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
app_dirs2 = "2.0"
bytes = { version = "0.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.13"
hyper-tls = "0.4.1"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-attributes = "0.1.7"
tracing-subscriber = "0.2.3"

[[bin]]
name = "cataclysm-manager"
path = "src/bin/cataclysm_manager.rs"
