# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
edition = "2018"
name = "cataclysm_manager"
version = "0.1.0"
authors = ["Damien Wilson <damien@mindglob.com>"]
description = "A tool for managing your Cataclysm: Dark Days ahead installation."
repository = "https://github.com/cataclysm-mods/manager"

[dependencies]
anyhow = "1.0"
app_dirs2 = "2.0"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "~2.33"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = "0.2"

[[bin]]
name = "cataclysm-manager"
path = "src/bin/cataclysm_manager.rs"
